--- a/src/routes/pages.css
+++ b/src/routes/pages.css
@@ -7,9 +7,21 @@
   position: relative;
   width: 100%;
 }
-:root {
-  --i: 0;
-  --i: 1;
-  --i: 2;
-  --i: 3;
+#main {
+  position: absolute;
+  width: calc(100% - 80px);
+  min-height: 92.5vh;
+  left: 80px;
+  transition: 0.3s;
+}
+#main.active {
+  width: calc(100% - 190px);
+  left: 190px;
+}
+
+@media (max-width: 991px) {
+  #main {
+    width: 100%;
+    left: 0;
+  }
 }
